refactor: move query state into alethic ism core go module
